Removed CONT_TIME

--- a/208 Project.ipynb
+++ b/208 Project.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
    "source": [
     "# trim to the predictor variables of interest\n",
     "predictors = fires[['FIRE_YEAR','DISCOVERY_DOY',\n",
-    "       'DISCOVERY_TIME','CONT_TIME', 'FIRE_SIZE', 'LATITUDE',\n",
+    "       'DISCOVERY_TIME', 'FIRE_SIZE', 'LATITUDE',\n",
     "       'LONGITUDE', 'source_system_fed',\n",
     "        'urbantype', 'duration']]\n",
     "target = fires['STAT_CAUSE_DESCR']\n",
@@ -471,18 +471,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['FIRE_YEAR', 'DISCOVERY_DOY', 'DISCOVERY_TIME', 'CONT_TIME',\n",
-       "       'FIRE_SIZE', 'LATITUDE', 'LONGITUDE', 'source_system_fed', 'duration'],\n",
+       "Index(['FIRE_YEAR', 'DISCOVERY_DOY', 'DISCOVERY_TIME', 'FIRE_SIZE', 'LATITUDE',\n",
+       "       'LONGITUDE', 'source_system_fed', 'urbantype', 'duration'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 329,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/carterportwood/anaconda3/lib/python3.7/site-packages/sklearn/preprocessing/data.py:323: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by MinMaxScaler.\n",
+      "  return self.partial_fit(X, y)\n",
+      "/Users/carterportwood/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n",
+      "/Users/carterportwood/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:543: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    }
+   ],
    "source": [
     "X_train_imp = scale_impute(X_train, num_cols)\n",
     "X_train_imp.head()\n",
