--- a/208 Project.ipynb
+++ b/208 Project.ipynb
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 505,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,9 +604,13 @@
     "    mm_scaler = skl.preprocessing.MinMaxScaler(feature_range=(0, 1))\n",
     "    qt_scaler = skl.preprocessing.QuantileTransformer(output_distribution=\"normal\")\n",
     "    \n",
+    "    # Suppress setting with copy warning\n",
+    "    pd.options.mode.chained_assignment = None\n",
+    "    \n",
     "    num_cols = num_cols.drop(\"FIRE_SIZE\")\n",
     "    x_scaled = mm_scaler.fit_transform(x_data[num_cols])\n",
     "    x_data[num_cols] = x_scaled\n",
+    "    \n",
     "    # Use quantile transform on fire size because of extreme outliers\n",
     "    fire_size_scaled = qt.fit_transform(np.array(fires[\"FIRE_SIZE\"]).reshape(-1,1))\n",
     "    fire_size_scaled = pd.Series(fire_size_scaled[:,0])\n",
@@ -635,61 +639,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 506,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/carterportwood/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n",
-      "/Users/carterportwood/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:543: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n",
-      "/Users/carterportwood/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  if sys.path[0] == '':\n",
-      "/Users/carterportwood/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/Users/carterportwood/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n",
-      "/Users/carterportwood/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:543: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n",
-      "/Users/carterportwood/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  if sys.path[0] == '':\n",
-      "/Users/carterportwood/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -730,7 +682,7 @@
        "      <td>0.869565</td>\n",
        "      <td>0.605479</td>\n",
        "      <td>0.613254</td>\n",
-       "      <td>-0.009757</td>\n",
+       "      <td>-0.009576</td>\n",
        "      <td>0.197963</td>\n",
        "      <td>0.675594</td>\n",
        "      <td>1.0</td>\n",
@@ -744,7 +696,7 @@
        "      <td>0.217391</td>\n",
        "      <td>0.545205</td>\n",
        "      <td>0.613254</td>\n",
-       "      <td>-0.009757</td>\n",
+       "      <td>-0.009576</td>\n",
        "      <td>0.337512</td>\n",
        "      <td>0.869853</td>\n",
        "      <td>1.0</td>\n",
@@ -758,7 +710,7 @@
        "      <td>0.217391</td>\n",
        "      <td>0.638356</td>\n",
        "      <td>0.860534</td>\n",
-       "      <td>-0.009757</td>\n",
+       "      <td>-0.009576</td>\n",
        "      <td>0.510050</td>\n",
        "      <td>0.571042</td>\n",
        "      <td>0.0</td>\n",
@@ -772,7 +724,7 @@
        "      <td>0.478261</td>\n",
        "      <td>0.073973</td>\n",
        "      <td>0.613254</td>\n",
-       "      <td>-0.009757</td>\n",
+       "      <td>-0.009576</td>\n",
        "      <td>0.256572</td>\n",
        "      <td>0.760890</td>\n",
        "      <td>1.0</td>\n",
@@ -786,7 +738,7 @@
        "      <td>0.565217</td>\n",
        "      <td>0.273973</td>\n",
        "      <td>0.563798</td>\n",
-       "      <td>-0.171458</td>\n",
+       "      <td>-0.168912</td>\n",
        "      <td>0.401461</td>\n",
        "      <td>0.821294</td>\n",
        "      <td>0.0</td>\n",
@@ -801,11 +753,11 @@
       ],
       "text/plain": [
        "   FIRE_YEAR  DISCOVERY_DOY  DISCOVERY_TIME  FIRE_SIZE  LATITUDE  LONGITUDE  \\\n",
-       "0   0.869565       0.605479        0.613254  -0.009757  0.197963   0.675594   \n",
-       "1   0.217391       0.545205        0.613254  -0.009757  0.337512   0.869853   \n",
-       "2   0.217391       0.638356        0.860534  -0.009757  0.510050   0.571042   \n",
-       "3   0.478261       0.073973        0.613254  -0.009757  0.256572   0.760890   \n",
-       "4   0.565217       0.273973        0.563798  -0.171458  0.401461   0.821294   \n",
+       "0   0.869565       0.605479        0.613254  -0.009576  0.197963   0.675594   \n",
+       "1   0.217391       0.545205        0.613254  -0.009576  0.337512   0.869853   \n",
+       "2   0.217391       0.638356        0.860534  -0.009576  0.510050   0.571042   \n",
+       "3   0.478261       0.073973        0.613254  -0.009576  0.256572   0.760890   \n",
+       "4   0.565217       0.273973        0.563798  -0.168912  0.401461   0.821294   \n",
        "\n",
        "   source_system_fed  urbantype  duration  DISCOVERY_TIME_was_missing  \\\n",
        "0                1.0        0.0  0.003785                         1.0   \n",
@@ -822,7 +774,7 @@
        "4                    0.0  "
       ]
      },
-     "execution_count": 351,
+     "execution_count": 506,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predicting the cause of wildfires"
+    "## Predicting the causes of wildfires"
    ]
   },
   {
@@ -908,7 +860,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random Forest"
+    "### All-Causes Random Forest"
    ]
   },
   {
@@ -933,20 +885,19 @@
     "min_samples_split = [2, 10]\n",
     "\n",
     "\n",
-    "rf_grid = {\n",
+    "multiclass_rf_grid = {\n",
     "    'n_estimators': [20],\n",
     "    'min_samples_split': min_samples_split,\n",
-    "    'max_depth': max_depth\n",
     "    'max_features': max_features}\n",
     "\n",
-    "rf_cv = skl.model_selection.GridSearchCV(RandomForestClassifier(), rf_grid,\n",
+    "multiclass_rf_cv = skl.model_selection.GridSearchCV(RandomForestClassifier(), multiclass_rf_grid,\n",
     "                                               cv=3, \n",
     "                                               scoring = \"accuracy\")\n",
     "\n",
-    "rf_cv.fit(X_train_imp, y_train)\n",
+    "multiclass_rf_cv.fit(X_train_imp, y_train)\n",
     "\n",
-    "rf_pred = rf_cv.predict(X_test_imp)\n",
-    "skl.metrics.accuracy_score(rf_pred, y_test)"
+    "multiclass_rf_pred = multiclass_rf_cv.predict(X_test_imp)\n",
+    "skl.metrics.accuracy_score(multiclass_rf_pred, y_test)"
    ]
   },
   {
@@ -966,7 +917,7 @@
     }
    ],
    "source": [
-    "rf_cv.best_params_"
+    "multiclass_rf_cv.best_params_"
    ]
   },
   {
@@ -976,7 +927,7 @@
    "outputs": [],
    "source": [
     "y_test_labels = cause_encode.inverse_transform(y_test)\n",
-    "rf_pred_labels = cause_encode.inverse_transform(rf_pred)\n",
+    "multiclass_rf_pred_labels = cause_encode.inverse_transform(multiclass_rf_pred)\n",
     "causes = cause_encode.inverse_transform(list(range(0,12)))"
    ]
   },
@@ -997,7 +948,7 @@
     }
    ],
    "source": [
-    "plot_confusion_matrix(y_test_labels, rf_pred_labels, causes, normalize=True)\n",
+    "plot_confusion_matrix(y_test_labels, multiclass_rf_pred_labels, causes, normalize=True)\n",
     "_=plt.title(\"Random Forest Confusion Matrix\")"
    ]
   },
@@ -1005,7 +956,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### KNN"
+    "### All-Causes KNN"
    ]
   },
   {
@@ -1025,19 +976,19 @@
     }
    ],
    "source": [
-    "knn_grid = {\n",
+    "multiclass_knn_grid = {\n",
     "    \"p\":[1,2],\n",
     "    \"n_neighbors\":[3,5]\n",
     "}\n",
     "\n",
-    "knn_cv = skl.model_selection.GridSearchCV(KNeighborsClassifier(), knn_grid,\n",
+    "multiclass_knn_cv = skl.model_selection.GridSearchCV(KNeighborsClassifier(), multiclass_knn_grid,\n",
     "                                               cv=3, \n",
     "                                               scoring = \"accuracy\")\n",
     "\n",
-    "knn_cv.fit(X_train_imp, y_train)\n",
+    "multiclass_knn_cv.fit(X_train_imp, y_train)\n",
     "\n",
-    "knn_pred = knn_cv.predict(X_test_imp)\n",
-    "skl.metrics.accuracy_score(knn_pred, y_test)"
+    "multiclass_knn_pred = knn_cv.predict(X_test_imp)\n",
+    "skl.metrics.accuracy_score(multiclass_knn_pred, y_test)"
    ]
   },
   {
@@ -1057,7 +1008,7 @@
     }
    ],
    "source": [
-    "knn_cv.best_params_"
+    "multiclass_knn_cv.best_params_"
    ]
   },
   {
@@ -1077,9 +1028,16 @@
     }
    ],
    "source": [
-    "knn_pred_labels = cause_encode.inverse_transform(knn_pred)\n",
-    "plot_confusion_matrix(y_test_labels, knn_pred_labels, causes, normalize=True)\n",
+    "multiclass_knn_pred_labels = cause_encode.inverse_transform(knn_pred)\n",
+    "plot_confusion_matrix(y_test_labels, multiclass_knn_pred_labels, causes, normalize=True)\n",
     "_=plt.title(\"KNN Confusion Matrix\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### All-Causes Gradient Boosting Classifier"
    ]
   },
   {
@@ -1099,12 +1057,12 @@
     }
    ],
    "source": [
-    "gb = GradientBoostingClassifier()\n",
+    "multiclass_gb = GradientBoostingClassifier()\n",
     "\n",
-    "gb.fit(X_train_imp, y_train)\n",
-    "gb_pred = gb.predict(X_test_imp)\n",
+    "multiclass_gb.fit(X_train_imp, y_train)\n",
+    "multiclass_gb_pred = multiclass_gb.predict(X_test_imp)\n",
     "\n",
-    "skl.metrics.accuracy_score(gb_pred, y_test)"
+    "skl.metrics.accuracy_score(multiclass_gb_pred, y_test)"
    ]
   },
   {
@@ -1124,26 +1082,25 @@
     }
    ],
    "source": [
-    "gb_pred_labels = cause_encode.inverse_transform(gb_pred)\n",
-    "plot_confusion_matrix(y_test_labels, gb_pred_labels, causes, normalize=True)\n",
+    "multiclass_gb_pred_labels = cause_encode.inverse_transform(multiclass_gb_pred)\n",
+    "plot_confusion_matrix(y_test_labels, multiclass_gb_pred_labels, causes, normalize=True)\n",
     "_=plt.title(\"Gradient Boosting Confusion Matrix\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 504,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pickle"
+    "### Multiclass Classification Discussion\n",
+    "\n",
+    "The random forest classifier performed best with an accuracy of 48.9%. Th un-tuned gradient boosting model had an accuracy of 46.5%, and the KNN model had an accuracy of 45.4%. \n",
+    "\n",
+    "Tuning and the amount of data used were limited by computation time and power (the above is only using 10% of the data!). More exhaustive parameter cross-validation searches would've been possible with greater computation power. \n",
+    "\n",
+    "The models did not fit the data very well, as we can see with the confusion matrices above. Classification with 12 classes is a difficult task, and the lower-frequency causes likely serve only to degrade the performance of the model. The most common causes clearly dominate the predictions.\n",
+    "\n",
+    "Future directions could include fitting a human-caused vs. non-human-caused model, in addition to the arson vs. not-arson predictions below."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
