added arson conclusions

--- a/208 Project-Arson Fits.ipynb
+++ b/208 Project-Arson Fits.ipynb
@@ -1633,12 +1633,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "T"
+    "The KNN and random forests had different advantages when predicting wildfires caused by arson. The random forest improved the the prediction accuracy compared to the benchmark overall, but had a lower f2 score. This indicates that it was missing many of the cases that were caused by arson. In comparison the KNN model, decreased the prediction accuracy compared to the baseline but had a higher f2 score, indicating that it was wrongly assigning many fires to arson that were not caused by arson. If the goal is to identify fires that warrent further investigation for arson the KNN model is preferable.\n",
+    "\n",
+    "Overall, neither of the models was particualry successful in separating those fires caused by arson."
    ]
   }
  ],
