Notebook looking good

--- a/208 Project.ipynb
+++ b/208 Project.ipynb
@@ -16,7 +16,9 @@
     "## Introduction\n",
     "Wildfires are an increasingly common threat to human lives, infrastructure, and wildlife. While occasional wildfires are often a natural part of an ecosystem, the majority of wildfires in the US are human-caused. Determining how fires start is important in suggesting future preventive measures and in bringing those responsible to justice. Currently firefighters, law enforcement, and land managers use a variety of clues to ascertain the cause of a fire. These include burn patterns, location, and local weather. \n",
     "\n",
-    "Our question is whether machine learning can be used to predict the cause of a fire based on the characteristics of a fire. In particular, can we create a model that will accurately predict whether a fire was caused by arson or not? Characteristics available for prediction include the duration, location, size, land owner, and population density. This project aims to create an additional tool to help prevent wildfires.\n"
+    "Our question is whether machine learning can be used to predict the cause of a fire based on the characteristics of a fire. In particular, can we create a model that will accurately predict whether a fire was caused by arson or not? Characteristics available for prediction include the duration, location, size, land owner, and population density. This project aims to create an additional tool to help prevent wildfires.\n",
+    "\n",
+    "Because of the size of the dataset, we unfortunately had to use a sample of 10% of the data (n$=171,317$). \n"
    ]
   },
   {
@@ -36,6 +38,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 510,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "171317"
+      ]
+     },
+     "execution_count": 510,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(fires)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 497,
    "metadata": {},
    "outputs": [],
@@ -43,21 +65,16 @@
     "# load packages\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import itertools\n",
+    "from math import sqrt\n",
     "\n",
-    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "import plotnine as p9\n",
     "import seaborn as sns\n",
     "\n",
     "import sklearn as skl\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.decomposition import PCA\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, mean_squared_error\n",
     "from sklearn.impute import SimpleImputer\n",
     "import sklearn.preprocessing\n",
-    "import sklearn.mixture\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier"
    ]
@@ -897,7 +914,7 @@
     "multiclass_rf_cv.fit(X_train_imp, y_train)\n",
     "\n",
     "multiclass_rf_pred = multiclass_rf_cv.predict(X_test_imp)\n",
-    "skl.metrics.accuracy_score(multiclass_rf_pred, y_test)"
+    "accuracy_score(multiclass_rf_pred, y_test)"
    ]
   },
   {
@@ -988,7 +1005,7 @@
     "multiclass_knn_cv.fit(X_train_imp, y_train)\n",
     "\n",
     "multiclass_knn_pred = knn_cv.predict(X_test_imp)\n",
-    "skl.metrics.accuracy_score(multiclass_knn_pred, y_test)"
+    "accuracy_score(multiclass_knn_pred, y_test)"
    ]
   },
   {
@@ -1062,7 +1079,7 @@
     "multiclass_gb.fit(X_train_imp, y_train)\n",
     "multiclass_gb_pred = multiclass_gb.predict(X_test_imp)\n",
     "\n",
-    "skl.metrics.accuracy_score(multiclass_gb_pred, y_test)"
+    "accuracy_score(multiclass_gb_pred, y_test)"
    ]
   },
   {
@@ -1093,13 +1110,15 @@
    "source": [
     "### Multiclass Classification Discussion\n",
     "\n",
-    "The random forest classifier performed best with an accuracy of 48.9%. Th un-tuned gradient boosting model had an accuracy of 46.5%, and the KNN model had an accuracy of 45.4%. \n",
+    "The random forest classifier performed best with an accuracy of 48.9%. Th un-tuned gradient boosting model had an accuracy of 46.5%, and the KNN model had an accuracy of 45.4%.\n",
     "\n",
     "Tuning and the amount of data used were limited by computation time and power (the above is only using 10% of the data!). More exhaustive parameter cross-validation searches would've been possible with greater computation power. \n",
     "\n",
-    "The models did not fit the data very well, as we can see with the confusion matrices above. Classification with 12 classes is a difficult task, and the lower-frequency causes likely serve only to degrade the performance of the model. The most common causes clearly dominate the predictions.\n",
+    "Considering that the most frequent class was 25% of observations, the models did not fit the data very well, as we can see with the confusion matrices above. Classification with 12 classes is a difficult task, and the lower-frequency causes likely serve only to degrade the performance of the model. The most common causes clearly dominate the predictions.\n",
     "\n",
-    "Future directions could include fitting a human-caused vs. non-human-caused model, in addition to the arson vs. not-arson predictions below."
+    "Future directions could include fitting a human-caused vs. non-human-caused model, in addition to the arson vs. not-arson predictions below.\n",
+    "\n",
+    "The most accurate model, the random forest classifier above, is clearly not accurate enough to be of use in any real-world application."
    ]
   },
   {
@@ -1113,7 +1132,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Fires caused intentionally through arson require addtional investigation and legal action. Thus, it is of special interest to predict which fires are caused by arson.\n",
+    "\n",
+    "This classification will be evaluated based on a weighted f score with beta = 2. This metric weights the recall of the prediction higher than the precison. We chose this metric because it is preferable to investigate a few extra fires that do not end up being caused by arson than to miss fires that are due to arson. \n",
+    "\n",
+    "Because of the size of the data set and the time limitation of this project we chose to fit a KNN classifier and a random forest classifier to see if we could learn those fires that were caused by arson."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# makeing training and test sets for arson vs not arson classification\n",
+    "arson_id_train = cause_encode.inverse_transform(y_train) == \"Arson\"\n",
+    "arson_id_test = cause_encode.inverse_transform(y_test) == \"Arson\"\n",
+    "\n",
+    "arson_y_train = np.array([1 if elt else 0 for elt in arson_id_train])\n",
+    "arson_y_test = np.array([1 if elt else 0 for elt in arson_id_test])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((34264,), (34264, 11))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arson_y_test.shape, X_test_imp.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Benchmarking "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To provide a point of referance for all of the other arson prediction models, we will set the benchmark with a model that predicts every case with the most common fire cause (not arson). The F2 score of this model is zero in this case because the model never predicts that the cause of the fire was arson. The benchmark prediction accuracy was .84 on the test set because the class imbalence in the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fires caused intentionally through arson require addtional inetigation and legal action. Thus it is of special interest to predict which fires are caused by arson.\n",
+    "\n",
+    "This classification will be evaluated based on a weighted f score with beta = 2. This metric weights the recall of the prediction higher than the precison. We chose this metric because it is preferable to investigate a few extra fires that do  not end up being caused by arson than to miss fires that are due to arson. \n",
+    "\n",
+    "Because of the size of the data set and the time limitation of this project we chose to fit a KNN classifier and a random forest classifier to see if we could learn those fires that were caused by arson."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make F2 scorer for model evaluation\n",
+    "f2_score = skl.metrics.make_scorer(skl.metrics.fbeta_score, beta = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cmfmiller\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1143: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what is the prediction rate with only the most common category?\n",
+    "most_common = int(np.mean(arson_y_train))\n",
+    "\n",
+    "y_pred = np.repeat(most_common, len(arson_y_test))\n",
+    "skl.metrics.fbeta_score(y_pred = y_pred, y_true = arson_y_test, beta = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.839160635068877"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# accuracy\n",
+    "np.mean(y_pred == arson_y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K Nearest Neighbors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The KNN predictor was tuned over a range over k's ranging from 1 to 10 using the training set, and evaluated based on the f2 score with 5 fold cross validation.\n",
+    "\n",
+    "Tuning selected the k = 1. The final KNN model was fit using all of the training data. The KNN prediction accuracy on the test set is 0.79 and the f2 score is 0.39. The accuracy  of this fit is decreased compared to the bench mark set, but it has a much higher recall, indicating that it is misclassifying a fair number of fires as caused by arson that are not."
    ]
   },
   {
@@ -1121,7 +1282,139 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# initiate kkn classifier\n",
+    "knn = KNeighborsClassifier()\n",
+    "\n",
+    "# define grid of parameters to tune model over\n",
+    "knn_grid = {\n",
+    "    'n_neighbors': [int(x) for x in np.arange(1, 10, 2)],\n",
+    "    'weights': ['distance'],\n",
+    "}\n",
+    "\n",
+    "# test over different neighbors and wieghting parameters\n",
+    "knn_select = skl.model_selection.GridSearchCV(estimator = knn, param_grid= knn_grid,\n",
+    "                                              scoring= f2_score,\n",
+    "                                              cv = 5, n_jobs = -1, \n",
+    "                                              return_train_score = True)\n",
+    "\n",
+    "# Fit the random search model\n",
+    "knn_select.fit(X_train_imp, arson_y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn_select.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fit best nearest neighbor model selected by the grid search\n",
+    "knn_best = KNeighborsClassifier(n_neighbors= 1, weights= 'uniform')\n",
+    "knn_best.fit(X_train_imp, arson_y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = knn_best.predict(X_test_imp)\n",
+    "knn_accuracy = np.mean(y_pred == arson_y_test)\n",
+    "knn_f2= skl.metrics.fbeta_score(y_pred = y_pred, y_true = arson_y_test, beta= 2)\n",
+    "print(\"The KNN prediction accuracy is \" + str(knn_accuracy) + \" and the f2 score is \" + str(knn_f2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The random forest model was tuned over the number of trees (ranging from 200 to 1000) and the minimum leaf samples size fromm (10 to 40). The upper limit was placed on the number of trees to limit computational time, and the leaf sample size was limited to 10 to avoid overfitting of the trees. Prediction accuracy of each fit was evaluated with f2 score and 5 fold cross validation on the training set.\n",
+    "\n",
+    "A random froest with 200 trees and a minimum leaf size of 10 was selected. We then fit the final random model using the complete training set, and evaluated it based on the test set. The final random forest arson prediction accuracy is 0.85and the f2 score is 0.18, which improved slightly on the benchmark model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define grid of initial parameter over which to fit the best model\n",
+    "grid = {'n_estimators':[int(x) for x in np.linspace(start = 200, stop = 1000, num = 5)],\n",
+    "               'min_samples_leaf':[10, 20, 40, 80, 100]}\n",
+    "\n",
+    "# Tune random forest regressor by randomly serching over tuning parameters\n",
+    "rfr = skl.ensemble.RandomForestClassifier()\n",
+    "# tune by searching through the randomized model features\n",
+    "rf_random = skl.model_selection.GridSearchCV(estimator = rfr, param_grid = grid, \n",
+    "                                             cv = 5,\n",
+    "                                             scoring= f2_score,  n_jobs = -1)\n",
+    "# Fit the random search model\n",
+    "rf_random.fit(X_train_imp, arson_y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 508,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rf_random' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-508-ea266b0743c6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrf_random\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_params_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'rf_random' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "rf_random.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fitting best random forest\n",
+    "best_rf = skl.ensemble.RandomForestClassifier(n_estimators = 200,\n",
+    "                                min_samples_leaf= 10)\n",
+    "best_rf.fit(X_train_imp, arson_y_train)\n",
+    "y_pred = best_rf.predict(X_test_imp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# accuracy and f2_score on the test set\n",
+    "rf_accuracy = np.mean(y_pred == arson_y_test)\n",
+    "rf_f2= skl.metrics.fbeta_score(y_pred = y_pred, y_true = arson_y_test, beta = 2)\n",
+    "print(\"the random forest prediction accuracy is \" + str(rf_accuracy) + \"and the f2 score is \" + str(rf_f2))"
+   ]
   }
  ],
  "metadata": {
